--- a/index.html
+++ b/index.html
@@ -10,34 +10,70 @@
         height: 100vh;
         width: 100vw;
         display: flex;
-        justify-content: center;
+        justify-content: space-around;
         align-items: center;
         margin: 0;
-        background-color: black;
+        background-color: rgb(31, 30, 30);
+        font-size: 18px;
+        font-family: "georgia";
+        text-align: center;
+      }
+      .text-container {
+        width: 30%;
+        color: white;
+        letter-spacing: 1px;
+        line-height: 1.5;
+        text-align: center;
+      }
+      .title {
+        font-size: 40px;
+      }
+
+      .text-description {
+        text-align: justify;
       }
 
       #game-board {
-        background-color: #ccc;
-        width: 100vmin;
-        height: 100vmin;
-        /* border: 1px solid;
-        border-color: #009900; */
+        background-color: black;
+        width: 95vmin;
+        height: 95vmin;
+        border: 0.25vmin solid white;
+        box-shadow: 0 0 10px 5px #fff, 0 0 20px 10px hsl(180, 1%, 35%),
+          0 0 50px 30px hsl(240, 1%, 32%);
         display: grid;
         grid-template-rows: repeat(21, 1fr);
         grid-template-columns: repeat(21, 1fr);
       }
       .snake {
-        background-color: hsl(200, 100%, 50%);
-        border: 0.25vmin solid black;
+        background-color: hsl(200, 81%, 39%);
+        border: 0.25vmin solid white;
+        box-shadow: 0 0 1px 0.5px #fff, 0 0 2px 1px hsl(200, 81%, 39%),
+          0 0 7px 5px hsl(201, 39%, 38%);
       }
       .food {
-        background-color: hsl(50, 100%, 50%);
-        border: 0.25vmin solid black;
+        background-color: red;
+        box-shadow: 0 0 3px 1.5px #fff, 0 0 5px 3px #f0f,
+          0 0 7px 5px rgb(206, 38, 38);
+        border: 0.25vmin solid white;
+        border-radius: 50%;
       }
     </style>
     <script src="game.js" defer type="module"></script>
   </head>
   <body>
+    <div class="text-container">
+      <h1 class="title">Snake Game &#128013;</h1>
+      <p class="text-description">
+        The player controls a long, thin creature, resembling a snake, which
+        roams around on a bordered plane, picking up food (or some other item),
+        trying to avoid hitting its own tail or the edges of the playing area.
+        Each time the snake eats a piece of food, its tail grows longer, making
+        the game increasingly difficult. The user controls the direction of the
+        snake's head (up, down, left, or right), and the snake's body follows.
+      </p>
+      <h3>Alter the snake speed here</h3>
+      <input type="range" min="1" max="10" id="speedRange" />
+    </div>
     <div id="game-board"></div>
   </body>
 </html>
